# DayRent

./: .env-local  .gitignore  README.md  pyproject.toml  requirements.txt  run_rev.py  run_upgrade.py
backend/: .gitignore  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/src/: config.py  database.py  main.py
backend/src/admin/: admin.py  baskets.py  bookings.py  categories.py  item_photos.py  items.py  photos_url.py  users.py
backend/src/api/: auth.py  baskets.py  bookings.py  categories.py  dependencies.py  items.py  profiles.py  search.py  users.py
backend/src/connectors/: elastic_connector.py  rebbit_mq.py  redis_connector.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0c6c364da0d4_addded_tables_item_photos_photos_url.py  35c8f0c2ff73_add_new_status_in_bookingstatus.py  3a3139d63532_add_bookings_model.py  eece1efcfdbc_add_cascade.py  (+3 more)
backend/src/models/: __init__.py  baskets.py  bookings.py  categories.py  item_photos.py  items.py  photos_url.py  refresh_tokens.py  users.py
backend/src/repositories/: base.py  baskets.py  bookings.py  categories.py  item_photos.py  items.py  photos_url.py  refresh_tokens.py  users.py
backend/src/schemas/: baskets.py  bookings.py  categories.py  items.py  photos_url.py  refresh_tokens.py  search.py  users.py
backend/src/services/: auth.py  base.py  baskets.py  bookings.py  categories.py  item_photos.py  items.py  photos_url.py  refresh_tokens.py  search.py  users.py
backend/src/tasks/: celery_app.py  tasks_bookings.py  tasks_geocode.py  tasks_photos.py
backend/src/utils/: database.py  exceptions.py  images.py  init.py  s3.py
backend/tests/: conftest.py
backend/tests/unit_tests/: test_auth.py
notification_service/: .gitignore  pyproject.toml
notification_service/src/: main.py
notification_service/src/services/: email_service.py
notification_service/src/subscribers/: bookings.py  main.py
notification_service/utils/: config.py
(+55 files in other folders)
