[project]
name = "dayrent"
version = "0.1.0"
description = ""
authors = [
    {name = "alexander111222-max",email = "shurak26@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.6,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "aiobotocore (>=3.2.1,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "asgiref (>=3.11.1,<4.0.0)",
    "elasticsearch[async] (>=9.3.0,<10.0.0)",
    "celery-pool-asyncio (>=0.2.0,<0.3.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
