[project]
name = "notification-service"
version = "0.1.0"
description = ""
authors = [
    {name = "alexander111222-max",email = "shurak26@bk.ru"}
]
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "aiogram (>=3.28.2,<4.0.0)",
    "resend (>=2.32.2,<3.0.0)",
    "faststream[cli] (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
